--- a/.github/workflows/build_grpc.yaml
+++ b/.github/workflows/build_grpc.yaml
@@ -30,12 +30,25 @@ jobs:
             
       
           run: |   
-            apt-get update -y
-            apt-get install -y build-essential autoconf libtool pkg-config git software-properties-common curl wget 
-            add-apt-repository ppa:deadsnakes/ppa -y
-            apt-get install python3.9 python3-pip python3-dev libpython3.9-dev -y
+            # Installing dependencies
+            apt-get update -y && apt-get upgrade -y
+            apt-get install -y build-essential libssl-dev zlib1g-dev libncurses5-dev libncursesw5-dev libreadline-dev libsqlite3-dev libgdbm-dev libdb5.3-dev libbz2-dev libexpat1-dev liblzma-dev tk-dev libffi-dev wget curl git  
+            
+            # Installing python3.9
+            cd /tmp
+            wget https://www.python.org/ftp/python/3.9.11/Python-3.9.11.tgz
+            tar -xf Python-3.9.11.tgz
+            cd Python-3.9.11
+            ./configure --enable-optimizations
+            make -j $(nproc) && make altinstall
+            cd /
+            
+            # Installing pip
+            curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+            python3.9 get-pip.py
             
             #Installing openssl with 1.1.1k version
+            cd /tmp
             wget https://www.openssl.org/source/old/1.1.1/openssl-1.1.1k.tar.gz
             mkdir /opt/openssl
             tar xfzv openssl-1.1.1k.tar.gz --directory /opt/openssl
@@ -50,13 +63,13 @@ jobs:
             ldconfig
             ldconfig -v
             openssl version
-            cd ~
+            cd /
             
             #Building grpc
+            cd /tmp
             echo "Building grpc ${{ inputs.release }}"
             python3.9 -m pip install --upgrade pip
             python3.9 -m pip install -U wheel setuptools
-            apt-get install -y libssl-dev libffi-dev git
             export REPO_ROOT=grpc
             git clone -b v${{ inputs.release }} https://github.com/grpc/grpc $REPO_ROOT
             cd $REPO_ROOT
