--- a/.github/workflows/build_grpc.yaml
+++ b/.github/workflows/build_grpc.yaml
@@ -80,6 +80,7 @@ jobs:
             python3.9 -m pip install --only-binary :all .
             python3.9 setup.py bdist_wheel
             
+            find / -name "grpcio*.whl"
             find / -name "cygrpc.cpython-39-s390x-linux-gnu.so"
             grpc_gnu=$(find / -name "cygrpc.cpython-39-s390x-linux-gnu.so")
             echo $grpc_gnu
