--- a/.github/workflows/build_grpc.yaml
+++ b/.github/workflows/build_grpc.yaml
@@ -10,7 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
-    permissions: read-all|write-all
+    permissions:
+      actions: read-all|write-all
     steps:
       - uses: actions/checkout@v2  
       - uses: uraimo/run-on-arch-action@v2.2.0
