--- a/.github/workflows/build_grpc.yaml
+++ b/.github/workflows/build_grpc.yaml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     permissions:
-      actions: read|write
+      actions: write
+      contents: write
     steps:
       - uses: actions/checkout@v2  
       - uses: uraimo/run-on-arch-action@v2.2.0
